# hyprsca

./: Cargo.toml  LICENSE  README.md
src/: main.rs  types.rs
src/backend/: hyprctl.rs  mod.rs  wlr_randr.rs
