[package]
name = "hyprsca"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
hex = "0.4.3"
hyprrust = { version = "0.1.0" }
hyprrust_macros = "0.1.0"
log = "0.4.26"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
xdg = "2.5.2"
