[package]
name = "wlscsr"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
hex = "0.4.3"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
xdg = "2.5.2"
